[metadata]
name = aiosshim
version = 0.0.0
description = asyncio SSH testing library
author = Simon Engledew
license = MIT

[options]
zip_safe = True
packages = find:
install_requires =
  asyncssh
  typeguard

[options.packages.find]
exclude = test

[options.extras_require]
tests =
  pytest
  coverage
  pytest-cov
  pytest-asyncio

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --strict
