[metadata]
name = aiosshim
version = 0.0.0
description = asyncio SSH testing library
author = Simon Engledew
license = MIT

[options]
zip_safe = True
package_dir=
  =src
packages=find:

install_requires =
  asyncssh
  typeguard

[options.packages.find]
exclude = tests
where = src

[options.extras_require]
test =
  coverage
  pytest
  pytest-cov
  pytest-asyncio
dev =
  black

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --strict
